fix for wide screens, and word spacing for tajweed and urdu font

--- a/app/assets/stylesheets/_locals.scss
+++ b/app/assets/stylesheets/_locals.scss
@@ -33,7 +33,6 @@ divehi,
 .indopak,
 .text_indopak {
   font-family: "pdms";
-  font-size: 30px;
 }
 
 .madani,
